--- a/user/print.css
+++ b/user/print.css
@@ -4,4 +4,24 @@
    de: Ort für benutzerdefinierte CSS-Regeln (print media) - Diese Datei kann
    beim Durchführen von Updates ohne Risiko beibehalten werden. Konsultieren Sie
    die README für Detailinformationen. */
+* {
+  font-size:98% !important;
+}
 
+.approval {
+  display:none;
+}
+h1 {
+  border:0;
+}
+.no-print { 
+  display:none;
+}
+
+#bodyContent img {
+  width:630px;
+}
+
+#footer {
+    display:none;
+}
